enum PlayerStatus
{
    ACTIVE,
    WAITING,
    SKIPPED,
    WON
}