public struct Position
{
    public int X { get; set; }
    public int Y { get; set; }
    public int PathIndex { get; set; }
}