namespace LudoGameEnums;
public enum ActionType
{
    ROLL_DICE,
    MOVE_PIECE,
    ENTER_BOARD,
    CAPTURE,
    PROMOTE_TO_GOAL
}