namespace LudoGameEnums;
public enum CollisionResult
{
    NONE,
    SAFE,
    CAPTURE
}