namespace LudoGameEnums;
public enum ColorState
{
    RED,
    BLUE,
    GREEN,
    YELLOW
}