namespace LudoGameEnums;
public enum PieceState
{
    IN_HOME,
    ON_BOARD,
    IN_GOAL
}