namespace LudoGameEnums;
public enum TurnResult
{
    NEXT_PLAYER,
    SAME_PLAYER,
    SKIP,
    INVALID_MOVE,
    PIECE_CAPTURED
}